# Semantra

./: .gitignore  AGENTS.md  Guided_Data_Mapping.pptx  PROJECT_OVERVIEW.md  README.md  _temp_overlay_kpi.py  help.en.md  help.md  parse_hrdh_columns.py  parse_workday_xsd.py  presentation.md  review.md  run_mapping_check.py  run_task.py  semantra_data_mapp_02.pptx  start_semantra.ps1  streamlit_app.py  workflows.md  ~$semantra_data_mapp_02.pptx
.github/: pull_request_template.md
backend/: .env.example  requirements.txt  semantra.sqlite3
docs/: README.md
knowledge_sources/: README.md  source_inventory.csv
metadata_dict/: HRDH_Table_Columns.xlsx  QuickBooks_Online_API_Mapping.xlsx  _analyze_workday.py  canonical_field_context_enrichment.csv  canonical_glossary.csv  canonical_glossary_erp.csv  hr_wd.xml  hr_wd_valid.xml  hrdh_knowledge_overlay.csv  metadata_dict.csv  qad_tables_mostUsed.xlsx  quickbooks_tables_reference.xlsx  sap_tables_mostUsed.xlsx  wd_hr_knowledge_overlay.csv  ~$qad_tables_mostUsed.xlsx
project_docs/: README.md  audit.md  canonical_enrichment_applied.md  canonical_enrichment_candidates.csv  canonical_enrichment_candidates.md  completed_slices.md  current_state.md  epics.md  implementation_checklists.md  plan.md  workspace_copilot_concept.md  (+3 more)
semantra_agent/: README.md  pyproject.toml
semantra_agent/.github/workflows/: test.yml
semantra_agent/docs/: AGENTIC_FRAMEWORK_PRESENTATION.md  CAPABILITY_ANALYSIS.md  TECHNICAL_GUIDE.md
semantra_agent/examples/: 01_sdk_basics.ipynb  02_backend_adapter.ipynb  03_langgraph_workflow.ipynb  04_real_file_mapping_demo.py  04b_supplier_rich_mapping_demo.py  04c_in_memory_demo.py  05_async_backend_demo.py  06_pipeline_langchain_demo.py
semantra_agent/src/semantra_agent/: __init__.py  langchain_tools.py
semantra_agent/src/semantra_backend_adapter/: __init__.py  _compat.py  connector.py  context.py  decision_store.py  factory.py  knowledge.py  llm.py  mapping.py  report.py  review.py
semantra_agent/src/semantra_core/: __init__.py  langgraph_workflow.py
semantra_agent/src/semantra_core/models/: knowledge.py  mapping.py  schema.py
semantra_agent/src/semantra_core/services/: __init__.py  implementations.py  protocols.py
semantra_agent/tests/: conftest.py  test_backend_mapping_write_decision.py  test_backend_pipeline_adapters.py  test_compat.py  test_e2e_mapping.py  test_e2e_rich_mapping.py  test_knowledge_models.py  test_langchain_tools.py  test_langgraph_workflow.py  test_mapping_engine_regression.py  test_mapping_models.py  test_pipeline_langchain_tools.py  test_pipeline_services.py  test_protocols.py  test_reference_implementations.py  test_schema_models.py
(+323 files in other folders)
