[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantra-agent"
version = "0.1.0"
description = "Domain-Specific Agentic Framework for Semantra semantic integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Semantra contributors" },
]
keywords = [
    "semantic-integration",
    "schema-mapping",
    "agent-framework",
    "langgraph",
    "langchain",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
# LangGraph integration: build state-machine workflows from the SDK services.
langgraph = [
    "langgraph>=0.0.20",
]
# LangChain integration: expose SDK services as LangChain Tools / Agents.
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
# Backend extras: required for the Semantra FastAPI backend adapter to
# delegate calls to the real mapping engine, knowledge runtime, and LLM.
backend = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "uvicorn>=0.34",
    "python-multipart>=0.0.20",
    "openpyxl>=3.1",
    "pandas>=2.0",
]
# Everything — useful for full local development and CI.
all = [
    "semantra-agent[langgraph,langchain,backend]",
]

[project.urls]
Homepage = "https://github.com/gslavisam/Semantra"
Documentation = "https://github.com/gslavisam/Semantra/blob/main/semantra_agent/docs/AGENTIC_FRAMEWORK_PRESENTATION.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["semantra_core*", "semantra_backend_adapter*", "semantra_agent*"]

# PEP 561: ship a ``py.typed`` marker for each package so downstream
# type checkers (mypy, pyright) see the SDK's type annotations
# without each consumer having to enable ``ignore_missing_imports``.
[tool.setuptools.package-data]
"semantra_core" = ["py.typed"]
"semantra_backend_adapter" = ["py.typed"]
"semantra_agent" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
